<resources>
    <string name="app_name">ITISService</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    //screen name
    <string name="screen_name_sign_in">Вход</string>
    <string name="screen_name_courses">Курсы</string>
    <string name="screen_name_sign_up">Регистрация</string>
    <string name="screen_name_quiz">Опрос</string>
    <string name="screen_name_course">Курс</string>
    <string name="screen_name_progress">Успеваемость</string>
    <string name="screen_name_settings">Настройки</string>
    <string name="screen_name_account">Аккаунт</string>
    <string name="screen_name_notification">Уведомления</string>

    //text fields
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_old_password">Старый пароль</string>
    <string name="hint_new_password">Новый пароль</string>
    <string name="hint_confirm_password">Подтверждение пароля</string>
    <string name="text_send">Отправить</string>
    <string name="email_validation_error">Неверный e-mail</string>
    <string name="password_validation_error">Пароль должен содержать не менее 4 символов и как минимум ссстоять из букв и цифр</string>
    <string name="confirm_password_validation_error">Пароли должны совпадать</string>
    <string name="btn_sign_in_text">Войти</string>
    <string name="btn_sign_up_text">Регистрация</string>
    <string name="email_address">Регистрация</string>
    <string name="btn_start_quiz_text">Пройти Опрос</string>
    <string name="btn_skip_text">Пропустить</string>
    <string name="messageWithSpannableLink">Посмотреть профиль КФУ</string>

    <string name="quiz_description">Мы можем подобрать интересный для вас курс по выбору. Для этого вам потребуется пройти небольшой опрос из нескольких вопросов</string>
    <string name="info_block">Информация</string>
    <string name="settings_block">Настройки</string>
    <string name="password_block">Пароль</string>
    <string name="notification_block">Основные</string>
    <string name="btn_account">Аккаунт</string>

    //dialog
    <string name="dialog_title_sign_up">Запись на курс</string>
    <string name="dialog_title_sign_out">Покинуть курс</string>
    <string name="dialog_subtitle">Подтверждение записи на курс</string>
    <string name="ok">Подтвердить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dismiss">Отмена</string>
    <string name="total">Итого:</string>

    <string name="item_name_courses">Курсы</string>
    <string name="item_name_settings">Настройки</string>

    <string-array name="questions">
        <item>1.Какой язык программирования вам нравится или хотели бы изучить?</item>
        <item>2.Что вы хотите разрабатывать?</item>
        <item>3.Какой из предметов вам легче дается или нравится больше?</item>
    </string-array>
</resources>
