<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_container_sign_in"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="@dimen/d1">

    <com.itis.itisservice.tools.view.EmailValidationEditText
        android:id="@+id/edt_email"
        style="@style/SignInEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d6"
        android:layout_marginStart="@dimen/d2"
        android:layout_marginTop="@dimen/d8"
        android:layout_marginEnd="@dimen/d2"
        android:hint="@string/hint_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d2"
        android:layout_marginTop="@dimen/d1"
        android:layout_marginEnd="@dimen/d2"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@drawable/password_toggle_color">

        <com.itis.itisservice.tools.view.PasswordValidationTextInputEditText
            android:id="@+id/edt_password"
            style="@style/SignInEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d6"
            android:hint="@string/hint_password" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_to_sign_in"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/d2"
        android:layout_marginTop="@dimen/d4"
        android:layout_marginEnd="@dimen/d2"
        android:text="@string/btn_sign_in_text" />

    <Button
        android:id="@+id/btn_link_to_sign_up"
        style="@style/PrimaryButton2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/d2"
        android:layout_marginTop="@dimen/d2"
        android:layout_marginEnd="@dimen/d2"
        android:text="@string/btn_sign_up_text" />

</LinearLayout>