<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_container_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextHint">

            <EditText
                android:id="@+id/edt_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorTextHint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@drawable/password_toggle_color">

            <EditText
                android:id="@+id/edt_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorTextHint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@drawable/password_toggle_color">

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/colorTextField"
            android:padding="16dp"
            android:text="@string/text_send"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d3"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</RelativeLayout>