<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/tv_account_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="4dp"
        android:paddingStart="@dimen/d2"
        android:paddingLeft="@dimen/d2"
        android:text="@string/password_block"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_settings"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@drawable/password_toggle_color">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDivider"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_old_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@drawable/password_toggle_color">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDivider"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@drawable/password_toggle_color">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDivider"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        style="@style/PrimaryButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="@dimen/d1"
        android:text="Сменить пароль"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_confirm_password" />


</android.support.constraint.ConstraintLayout>